objects/PC_Document__c.object
<CustomObject>
    <description>PatientConnect custom object to manage documents</description>
    <fields>
        <fullName>ACLS_Description__c</fullName>
        <formula>IF(PC_Parent_Document__c = &apos;&apos;, &apos;Original document before split&apos;, IF(PC_Parent_Document__c != &apos;&apos;, &apos;Split document: Pages &lt;&apos;  &amp;  PC_ParentPgRange__c  &amp; &apos;&gt;&apos; , IF(RecordType.DeveloperName = &apos;PC_Email_Attachment&apos;, &apos; &apos;, &apos;Other&apos;) ) )</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Failure_reason__c</fullName>
        <label>Failure reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Fax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fax</label>
        <referenceTo>EFX__efax__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACLS_Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACLS_RelationType__c</fullName>
        <formula>IF(PC_Parent_Document__c = &apos;&apos;, &apos;Original&apos;, IF(PC_Parent_Document__c != &apos;&apos;, &apos;Split&apos;, IF(RecordType.DeveloperName = &apos;PC_Email_Attachment&apos;, &apos;Email Attachment&apos;, &apos;Other&apos;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RelationType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_eLetter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>eLetter</label>
        <referenceTo>PC_eLetter__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Alert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the alert object for which the document object is linked.</description>
        <label>Alert</label>
        <referenceTo>PC_Alert__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Faxes_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Applicant associated with this document.</description>
        <label>Applicant</label>
        <referenceTo>PC_Applicant__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Archived_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reference to the user who archived the document.</description>
        <label>Archived By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Archived_On__c</fullName>
        <description>The date and time when the document was archived.</description>
        <label>Archived On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Attachment_Id__c</fullName>
        <description>Salesforce ID of the attachment record for which the document is linked.</description>
        <label>Attachment Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Correlation_Id__c</fullName>
        <description>A unique identifier used to correlate requests to the splitter service. An attachment is only added by the service if the correlation Id matches the request. Added in v3.0.1.</description>
        <label>Correlation Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Description__c</fullName>
        <description>The description of the document.</description>
        <inlineHelpText>Document description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Document_Category__c</fullName>
        <description>The Category that the document may fall into.
Note: A document can be associated with multiple categories.</description>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>PC_EngagementProgramCode__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Enrollment Form</fullName>
                </value>
                <value>
                    <fullName>Patient Consent</fullName>
                </value>
                <value>
                    <fullName>Patient Information Update</fullName>
                </value>
                <value>
                    <fullName>Insurance Information</fullName>
                </value>
                <value>
                    <fullName>Prescription</fullName>
                </value>
                <value>
                    <fullName>Copay Information</fullName>
                </value>
                <value>
                    <fullName>PA Documentation</fullName>
                </value>
                <value>
                    <fullName>Appeals Documentation</fullName>
                </value>
                <value>
                    <fullName>Post Infusion Report</fullName>
                </value>
                <value>
                    <fullName>Post Training Report</fullName>
                </value>
                <value>
                    <fullName>Test Results</fullName>
                </value>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
                <value>
                    <fullName>Illegible Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Document_Name__c</fullName>
        <description>Name of the Document</description>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Document_Status__c</fullName>
        <description>The status of the document.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Review Needed</fullName>
                    <default>true</default>
                    <label>Review Needed</label>
                </value>
                <value>
                    <fullName>Categorized</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Illegible</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>Split Failure</fullName>
                </value>
                <value>
                    <fullName>Awaiting Attachment</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Ready for Split</fullName>
                </value>
                <value>
                    <fullName>Split in Progress</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Preview Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_EngagementProgramCode__c</fullName>
        <description>Internal field to associate Engagement Program Code with Document Tags/Category. Not to be used on layout.</description>
        <label>Engagement Program Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>ASHF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Engagement_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Engagement Program lookup for documents.</description>
        <label>Engagement Program</label>
        <referenceTo>PC_Engagement_Program__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Error__c</fullName>
        <description>Status of the document.</description>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Failure_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Failure count.</description>
        <label>Failure Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Fax_Handle__c</fullName>
        <description>Identified for incoming fax</description>
        <label>Inbound Fax Handle</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Fax_Sent_Date_Time__c</fullName>
        <description>Date and time on which the fax was sent to the recipient.</description>
        <label>Fax Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Fax_Unique_Id__c</fullName>
        <description>Used for the Right Fax Integration to unique identifier</description>
        <externalId>true</externalId>
        <label>Fax Unique Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_From_Email_Address__c</fullName>
        <description>Email Address of the sender</description>
        <label>From Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PC_From_Fax_Number__c</fullName>
        <description>The Fax number from where the fax is recevied</description>
        <label>From Fax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_From_Name__c</fullName>
        <description>The name of the individual or business from where the fax/document is received.</description>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Has_Queue_Owner__c</fullName>
        <description>Formula field to denote if document has queue owner.</description>
        <formula>NOT(ISBLANK(Owner:Queue.Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Queue Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Inbound_Fax_Date_Time__c</fullName>
        <description>The date and time on which the fax inbound record is received.</description>
        <label>Fax Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Inbound_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the fax is of type Inbound</description>
        <label>Inbound Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_IsSplit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected or checked when the document is split.</description>
        <label>Is Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Mark_for_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected or checked when the document needs to be deleted.</description>
        <label>Mark for Delete ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Marked_Spam_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the user who has marked the document as spam.</description>
        <label>Marked Spam By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Marked_Spam_On__c</fullName>
        <description>Date when the document was marked as a spam.</description>
        <label>Marked Spam On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Outbound_Fax_Handle__c</fullName>
        <description>Identified for outgoing fax</description>
        <label>Outbound Fax Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Page_Count__c</fullName>
        <description>To hold total number of pages of parent document. Added in v3.0.1.</description>
        <label>Page Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_ParentPgRange__c</fullName>
        <description>Range of pages selected from the parent document in this document. Added in v3.0.1.</description>
        <label>Parent Document Page Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Parent_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the parent document.</description>
        <label>Parent Document</label>
        <referenceTo>PC_Document__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The document request form.</description>
        <label>Request Form</label>
        <referenceTo>PC_Request_Form__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>PC_Document_Request_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_SMS_Body__c</fullName>
        <description>Body of the message.</description>
        <label>SMS Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_SMS_Phone_Number__c</fullName>
        <description>Phone number to which the message is sent to.</description>
        <label>SMS Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SMS_Timestamp__c</fullName>
        <description>Time when the SMS is sent.</description>
        <label>SMS Timestamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Sorted_Parent_Pg_Num__c</fullName>
        <description>Number array to store sorted pages in the form of a range instead of as comma separated pages.</description>
        <label>Sorted Parent Page Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_To_Email_Address_Inbound__c</fullName>
        <description>Email address of the receiver. This will be populated only for an inbound email.</description>
        <inlineHelpText>Email address of the receiver. This will be populated only for an inbound email.</inlineHelpText>
        <label>To Email Address (Inbound)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_To_Email_Address__c</fullName>
        <description>Email address of the receiver. This will be populated only for an outbound emails.</description>
        <label>To Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PC_To_Fax_Name__c</fullName>
        <description>The fax receiver’s name.</description>
        <label>To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_To_Fax_Number__c</fullName>
        <description>The fax number of the receiver.</description>
        <label>To Fax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_isPIIIdentified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected when a document has been identified to hold any PII information.</description>
        <label>Any Information Identified</label>
        <type>Checkbox</type>
    </fields>
    <label>Document</label>
    <listViews>
        <fullName>ACLS_Inbound_Fax_Completed</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>PC_From_Fax_Number__c</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Document_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PC_Document__c.PC_Fax_Inbound</value>
        </filters>
        <label>Inbound Fax – Completed</label>
    </listViews>
    <listViews>
        <fullName>ACLS_Inbound_Fax_Failed</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>PC_From_Fax_Number__c</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Document_Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PC_Document__c.PC_Fax_Inbound</value>
        </filters>
        <label>Inbound Fax - Failed</label>
    </listViews>
    <listViews>
        <fullName>ACLS_Inbound_Fax_In_Review</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>PC_From_Fax_Number__c</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Document_Status__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PC_Document__c.PC_Fax_Inbound</value>
        </filters>
        <label>Inbound Fax – In Review</label>
    </listViews>
    <listViews>
        <fullName>ACLS_Inbound_Fax_New</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>PC_From_Fax_Number__c</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Document_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PC_Document__c.PC_Fax_Inbound</value>
        </filters>
        <label>Inbound Fax - New</label>
    </listViews>
    <listViews>
        <fullName>ACLS_Outbound_Fax_Completed</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>PC_To_Fax_Number__c</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Document_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PC_Document__c.PC_Fax_Outbound</value>
        </filters>
        <label>Outbound Fax – Completed</label>
    </listViews>
    <listViews>
        <fullName>ACLS_Outbound_Fax_Failed</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>PC_To_Fax_Number__c</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Document_Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PC_Document__c.PC_Fax_Outbound</value>
        </filters>
        <label>Outbound Fax - Failed​</label>
    </listViews>
    <listViews>
        <fullName>ACLS_Outbound_Fax_In_Review</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>PC_To_Fax_Number__c</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Document_Status__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PC_Document__c.PC_Fax_Outbound</value>
        </filters>
        <label>Outbound Fax – In Review</label>
    </listViews>
    <listViews>
        <fullName>ACLS_Outbound_Fax_New</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>PC_To_Fax_Number__c</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Document_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PC_Document__c.PC_Fax_Outbound</value>
        </filters>
        <label>Outbound Fax - New</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>PC_Parent_Document__c</columns>
        <columns>PC_From_Fax_Number__c</columns>
        <columns>PC_From_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PC_Attachment_Id__c</columns>
        <columns>PC_Engagement_Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Inbound_Archived</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Document_Status__c</field>
            <operation>equals</operation>
            <value>Spam,Archived,Illegible</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PC_Document__c.PC_Email_Inbound,PC_Document__c.PC_Fax_Inbound,PC_Document__c.PC_SMS_Inbound,PC_Document__c.PC_Online_Form</value>
        </filters>
        <label>All Inbound Archived</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Inbound_Documents</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>PC_Engagement_Program__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Inbound Documents</label>
    </listViews>
    <listViews>
        <fullName>All_Inbound_New</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Document_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PC_Document__c.PC_Email_Inbound,PC_Document__c.PC_Fax_Inbound,PC_Document__c.PC_SMS_Inbound,PC_Document__c.PC_Online_Form</value>
        </filters>
        <label>All Inbound New</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Inbound_Reimbursement</fullName>
        <columns>NAME</columns>
        <columns>PC_Document_Category__c</columns>
        <columns>PC_Document_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Document_Category__c</field>
            <operation>includes</operation>
            <value>PA Documentation,Insurance Information,Appeals Documentation,Copay Information</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PC_Document__c.PC_Email_Inbound,PC_Document__c.PC_Fax_Inbound,PC_Document__c.PC_SMS_Inbound,PC_Document__c.PC_Online_Form</value>
        </filters>
        <label>All Inbound Reimbursement</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Assigned_to_Me</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>heidt</value>
        </filters>
        <label>Assigned to Me</label>
    </listViews>
    <listViews>
        <fullName>Education_Materials</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PC_Document__c.PC_Knowledge_Article</value>
        </filters>
        <label>Education Materials</label>
    </listViews>
    <nameField>
        <displayFormat>DOC-{00000000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <recordTypes>
        <fullName>ACLS_SMS_Outbound</fullName>
        <active>true</active>
        <label>SMS Outbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>Document</fullName>
        <active>true</active>
        <description>General Document or Attachment</description>
        <label>Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Email_Attachment</fullName>
        <active>true</active>
        <description>Record type for documents that are attachments of an inbound / outbound email</description>
        <label>Email Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Email_Inbound</fullName>
        <active>true</active>
        <description>Inbound Emails</description>
        <label>Email - Inbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Email_Outbound</fullName>
        <active>true</active>
        <label>Email - Outbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Fax_Inbound</fullName>
        <active>true</active>
        <description>Inbound fax document</description>
        <label>Fax - Inbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Fax_Outbound</fullName>
        <active>true</active>
        <description>Outbound fax document</description>
        <label>Fax - Outbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Knowledge_Article</fullName>
        <active>true</active>
        <label>Knowledge Article</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Manual_Upload</fullName>
        <active>true</active>
        <description>This record is for the manual upload of file from document log on program related list.</description>
        <label>Manual Upload</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Online_Form</fullName>
        <active>true</active>
        <description>This recordtype is to store the incoming Smartform Registrations as a Document.</description>
        <label>Online Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Portal_Sharing</fullName>
        <active>true</active>
        <description>Record type to capture the documents that have been created as a part of sharing to the portal</description>
        <label>Portal Sharing</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_SMS_Inbound</fullName>
        <active>true</active>
        <description>Stores inbound SMS Communication History</description>
        <label>SMS Inbound</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>PC_Address__c</fullName>
        <label>PC Address</label>
    </sharingReasons>
</CustomObject>